# pydantic-ai-cerebras-react-test

./: .gitignore  20_iterations.py  4_configs.md  STRICT_MODE_FIX.md  agents.md  cerebras.txt  config_1_output_type.py  config_2_finish_tool.py  config_3_iter.py  config_4_union_output.py  corpus.py  logging_config.py  main.py  p.py  patterns.py  pyproject.toml
20251229_20/: prompt_01_comparison.txt  timing_results.csv
20251229_20/pat5/: prompt_01_items.json  prompt_01_summary.txt
20251229_21/: prompt_01_comparison.txt  timing_results.csv
20251229_21/pat1/: prompt_01_items.json  prompt_01_summary.txt
20251229_21/pat2/: prompt_01_items.json  prompt_01_summary.txt
20251229_21/pat3/: prompt_01_items.json  prompt_01_summary.txt
20251229_21/pat4/: prompt_01_items.json  prompt_01_summary.txt
20251229_21/pat5/: prompt_01_items.json  prompt_01_summary.txt
20251229_22/: prompt_01_comparison.txt  timing_results.csv
20251229_22/pat1/: prompt_01_items.json  prompt_01_summary.txt
20251229_22/pat2/: prompt_01_items.json  prompt_01_summary.txt
20251229_22/pat3/: prompt_01_items.json  prompt_01_summary.txt
20251229_22/pat4/: prompt_01_items.json  prompt_01_summary.txt
20251229_22_01/: prompt_01_comparison.txt  prompt_02_comparison.txt  timing_results.csv
20251229_22_01/pat1/: prompt_01_items.json  prompt_01_summary.txt  prompt_02_items.json  prompt_02_summary.txt
20251229_22_01/pat2/: prompt_01_items.json  prompt_01_summary.txt  (+2 more)
20260107_19/: prompt_01_comparison.txt
20260107_19_01/: timing_results.csv
doc_results/: timing_results.csv
(+384 files in other folders)
