[project]
name = "pydantic-ai-cerebras-react-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ddgs>=9.10.0",
    "logfire>=3.0.0",
    "loguru>=0.7.3",
    "pydantic-ai>=1.39.0",
    "rich>=14.2.0",
    "uvloop>=0.22.1",
]
